unpackaged/main/default/objects/Goal__c/fields/Assignee_Current_Level__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Current_Level__c</fullName>
    <formula>TEXT(Assignee__r.Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignee Current Level</label>
    <type>Text</type>
</CustomField>