unpackaged/main/default/objects/Goal__c/fields/Assignee_Current_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Current_Manager_Name__c</fullName>
    <formula>Assignee__r.Manager.FirstName&amp;&quot; &quot;&amp;Assignee__r.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignee Current Manager Name</label>
    <type>Text</type>
</CustomField>