unpackaged/main/default/objects/Goal__c/fields/Assignee_Current_Manager_Subteam__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Current_Manager_Subteam__c</fullName>
    <formula>Assignee_Current_Manager_Name__c&amp;&quot; (&quot;&amp;TEXT(Assignee__r.Manager.Subteam__c)&amp;&quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignee Current Manager (Subteam)</label>
    <type>Text</type>
</CustomField>