unpackaged/main/default/objects/Goal__c/fields/Assignee_Current_Region__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Current_Region__c</fullName>
    <formula>TEXT(Assignee__r.Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignee Current Region</label>
    <type>Text</type>
</CustomField>