unpackaged/main/default/objects/Goal__c/fields/Assignee_Current_Role__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Current_Role__c</fullName>
    <formula>Assignee__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignee Current Role</label>
    <type>Text</type>
</CustomField>