unpackaged/main/default/objects/Goal__c/fields/Assignee_Current_Subregion__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Current_Subregion__c</fullName>
    <formula>TEXT(Assignee__r.Subregion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignee Current Subregion</label>
    <type>Text</type>
</CustomField>