unpackaged/main/default/objects/Goal__c/fields/Assignee_Current_Subteam__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Current_Subteam__c</fullName>
    <formula>TEXT(Assignee__r.Subteam__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignee Current Subteam</label>
    <type>Text</type>
</CustomField>