unpackaged/main/default/objects/Goal__c/fields/Assignee_ID_Case_Safe__c.field-meta.xml
<CustomField>
    <fullName>Assignee_ID_Case_Safe__c</fullName>
    <formula>CASESAFEID(Assignee__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignee ID (Case Safe)</label>
    <type>Text</type>
</CustomField>