unpackaged/main/default/objects/Goal__c/fields/Assignee_Is_Active_User__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Is_Active_User__c</fullName>
    <formula>Assignee__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignee Is Active User?</label>
    <type>Checkbox</type>
</CustomField>