unpackaged/main/default/objects/Goal__c/fields/Assignee_Name_Role__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Name_Role__c</fullName>
    <formula>Assignee__r.FirstName&amp;&quot; &quot;&amp;Assignee__r.LastName&amp;&quot; (&quot;&amp;Assignee_Role__c&amp;&quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignee Name (Role)</label>
    <type>Text</type>
</CustomField>