unpackaged/main/default/objects/Goal__c/fields/Assignee_Name_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Name_Tenure__c</fullName>
    <formula>&quot;(&quot;&amp;TEXT(ROUND(Assignee__r.Months_at_Retool__c,0))&amp;&quot;) &quot;&amp;Assignee__r.FirstName&amp;&quot; &quot;&amp;Assignee__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignee Name (Tenure)</label>
    <type>Text</type>
</CustomField>