unpackaged/main/default/objects/Goal__c/fields/Assignee_Role_Rule__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Role_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignee Role Rule</label>
    <referenceTo>ROE_Rule__c</referenceTo>
    <relationshipLabel>Goals</relationshipLabel>
    <relationshipName>Goals</relationshipName>
    <type>Lookup</type>
</CustomField>