unpackaged/main/default/objects/Goal__c/fields/Assignee_Start_Date_Current_Role__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Start_Date_Current_Role__c</fullName>
    <label>Assignee Start Date (Current Role)</label>
    <type>Date</type>
</CustomField>