unpackaged/main/default/objects/Goal__c/fields/Assignee_Start_Month_All_Roles__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Start_Month_All_Roles__c</fullName>
    <formula>Assignee__r.Start_Month_All_Roles__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignee Start Month (All Roles)</label>
    <type>Date</type>
</CustomField>