unpackaged/main/default/objects/Goal__c/fields/Assignee_Start_Year_All_Roles__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Start_Year_All_Roles__c</fullName>
    <formula>Assignee__r.Start_Year_All_Roles__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignee Start Year (All Roles)</label>
    <type>Text</type>
</CustomField>