unpackaged/main/default/objects/Goal__c/fields/Average_Deal_Size_Exp_QTD__c.field-meta.xml
<CustomField>
    <fullName>Average_Deal_Size_Exp_QTD__c</fullName>
    <formula>IF(Deal_Count_Actual_Exp_QTD__c &gt; 0, New_Annualized_Rev_Actual_Exp_QTD__c / Deal_Count_Actual_Exp_QTD__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Deal Size (Exp) (QTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>