unpackaged/main/default/objects/Goal__c/fields/Average_Deal_Size_New_YTD__c.field-meta.xml
<CustomField>
    <fullName>Average_Deal_Size_New_YTD__c</fullName>
    <formula>IF(Deal_Count_Actual_New_YTD__c &gt; 0, New_Annualized_Rev_Actual_New_YTD__c / Deal_Count_Actual_New_YTD__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Deal Size (New) (YTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>