unpackaged/main/default/objects/Goal__c/fields/Average_Deal_Size_Upsell_HTD__c.field-meta.xml
<CustomField>
    <fullName>Average_Deal_Size_Upsell_HTD__c</fullName>
    <formula>IF(Deal_Count_Actual_Upsell_HTD__c &gt; 0, New_Annualized_Rev_Actual_Upsell_HTD__c / Deal_Count_Actual_Upsell_HTD__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Deal Size (Upsell) (HTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>