unpackaged/main/default/objects/Goal__c/fields/Booking_Channel__c.field-meta.xml
<CustomField>
    <fullName>Booking_Channel__c</fullName>
    <label>Booking Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Booking_Channels</valueSetName>
    </valueSet>
</CustomField>