unpackaged/main/default/objects/Goal__c/fields/Days_in_Month__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Month__c</fullName>
    <formula>DAY(Period_End__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>