unpackaged/main/default/objects/Goal__c/fields/Deal_Count_Actual_New__c.field-meta.xml
<CustomField>
    <fullName>Deal_Count_Actual_New__c</fullName>
    <label>Deal Count Actual (New)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>