unpackaged/main/default/objects/Goal__c/fields/Expansion_Rate_Actual__c.field-meta.xml
<CustomField>
    <fullName>Expansion_Rate_Actual__c</fullName>
    <formula>IF(Renewal_Baseline_Ann_Rev_Actual__c &gt; 0,New_Annualized_Rev_Actual_Exp__c / Renewal_Baseline_Ann_Rev_Actual__c,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expansion Rate Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>