unpackaged/main/default/objects/Goal__c/fields/Expansion_Rate_Goal_QTD__c.field-meta.xml
<CustomField>
    <fullName>Expansion_Rate_Goal_QTD__c</fullName>
    <label>Expansion Rate Goal (QTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>