unpackaged/main/default/objects/Goal__c/fields/FTE__c.field-meta.xml
<CustomField>
    <fullName>FTE__c</fullName>
    <formula>CASE(Type__c,
  &quot;Individual&quot;,Ramp_Pct__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FTE</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>