unpackaged/main/default/objects/Goal__c/fields/Goal_ID_case_safe__c.field-meta.xml
<CustomField>
    <fullName>Goal_ID_case_safe__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goal ID (case safe)</label>
    <type>Text</type>
</CustomField>