unpackaged/main/default/objects/Goal__c/fields/Headcount__c.field-meta.xml
<CustomField>
    <fullName>Headcount__c</fullName>
    <formula>CASE(Type__c,
  &quot;Individual&quot;,1,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Headcount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>