unpackaged/main/default/objects/Goal__c/fields/Is_Assignee_First_Goal__c.field-meta.xml
<CustomField>
    <fullName>Is_Assignee_First_Goal__c</fullName>
    <formula>Start_Date__c = Assignee__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Assignee First Goal?</label>
    <type>Checkbox</type>
</CustomField>