unpackaged/main/default/objects/Goal__c/fields/Is_Assignee_First_Goal_In_Role__c.field-meta.xml
<CustomField>
    <fullName>Is_Assignee_First_Goal_In_Role__c</fullName>
    <formula>Month_Index_Current_Role__c = 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Assignee First Goal In Role?</label>
    <type>Checkbox</type>
</CustomField>