unpackaged/main/default/objects/Goal__c/fields/Is_Assignee_Last_Goal_In_Role__c.field-meta.xml
<CustomField>
    <fullName>Is_Assignee_Last_Goal_In_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Assignee Last Goal In Role?</label>
    <type>Checkbox</type>
</CustomField>