unpackaged/main/default/objects/Goal__c/fields/Is_Current_Role__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Role__c</fullName>
    <formula>Assignee_Role__c=Assignee__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current Role?</label>
    <type>Checkbox</type>
</CustomField>