unpackaged/main/default/objects/Goal__c/fields/Is_In_Seat_Whole_Month__c.field-meta.xml
<CustomField>
    <fullName>Is_In_Seat_Whole_Month__c</fullName>
    <formula>IF(ISPICKVAL(Type__c,&quot;Individual&quot;) &amp;&amp; End_Date__c=Period_End__c &amp;&amp; Start_Date__c = Period_Start__c,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is in Seat Whole Month?</label>
    <type>Checkbox</type>
</CustomField>