unpackaged/main/default/objects/Goal__c/fields/Is_Last_Month_of_Period_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Is_Last_Month_of_Period_Quarter__c</fullName>
    <formula>IF(CASE(MONTH(Period_Start__c),
 3,1,
 6,1,
 9,1,
 12,1,
 0
)=1,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if the period start/end date represent a month that&#39;s the last month of the quarter</inlineHelpText>
    <label>Is Last Month of Period Quarter?</label>
    <type>Checkbox</type>
</CustomField>