unpackaged/main/default/objects/Goal__c/fields/Is_Last_Month_of_Period_Year__c.field-meta.xml
<CustomField>
    <fullName>Is_Last_Month_of_Period_Year__c</fullName>
    <formula>IF(MONTH(Period_Start__c)=12,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Last Month of Period Year?</label>
    <type>Checkbox</type>
</CustomField>