unpackaged/main/default/objects/Goal__c/fields/Is_Net_Expansion__c.field-meta.xml
<CustomField>
    <fullName>Is_Net_Expansion__c</fullName>
    <formula>(ISPICKVAL(Type__c,&quot;Company&quot;) || ISPICKVAL(Type__c,&quot;Team&quot;)) 
&amp;&amp; (ISPICKVAL(Booking_Channel__c,&quot;Expansion&quot;) || ISPICKVAL(Booking_Channel__c,&quot;Contraction&quot;) || ISPICKVAL(Booking_Channel__c,&quot;Churn&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Net Expansion?</label>
    <type>Checkbox</type>
</CustomField>