unpackaged/main/default/objects/Goal__c/fields/Is_Ramp_Period__c.field-meta.xml
<CustomField>
    <fullName>Is_Ramp_Period__c</fullName>
    <formula>Ramp_Pct__c &lt; 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Ramp Period?</label>
    <type>Checkbox</type>
</CustomField>