unpackaged/main/default/objects/Goal__c/fields/Journey_Category__c.field-meta.xml
<CustomField>
    <fullName>Journey_Category__c</fullName>
    <label>Journey Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>