unpackaged/main/default/objects/Goal__c/fields/Journeys_Created_Goal__c.field-meta.xml
<CustomField>
    <fullName>Journeys_Created_Goal__c</fullName>
    <label>Journeys Created Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>