unpackaged/main/default/objects/Goal__c/fields/Lost_Count_Actual__c.field-meta.xml
<CustomField>
    <fullName>Lost_Count_Actual__c</fullName>
    <label>Lost Count Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>