unpackaged/main/default/objects/Goal__c/fields/Lost_Count_Actual_Exp_Non_Ren__c.field-meta.xml
<CustomField>
    <fullName>Lost_Count_Actual_Exp_Non_Ren__c</fullName>
    <label>Lost Count Actual (Exp: Non Ren)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>