unpackaged/main/default/objects/Goal__c/fields/Lost_Count_Actual_New_YTD__c.field-meta.xml
<CustomField>
    <fullName>Lost_Count_Actual_New_YTD__c</fullName>
    <label>Lost Count Actual (New) (YTD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>