unpackaged/main/default/objects/Goal__c/fields/Manager_Role_Rule__c.field-meta.xml
<CustomField>
    <fullName>Manager_Role_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager Role Rule</label>
    <referenceTo>ROE_Rule__c</referenceTo>
    <relationshipLabel>Goals (Manager Role Rule)</relationshipLabel>
    <relationshipName>Goals1</relationshipName>
    <type>Lookup</type>
</CustomField>