unpackaged/main/default/objects/Goal__c/fields/Manager_Segment__c.field-meta.xml
<CustomField>
    <fullName>Manager_Segment__c</fullName>
    <label>Manager Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Segment</valueSetName>
    </valueSet>
</CustomField>