unpackaged/main/default/objects/Goal__c/fields/Mapped_Roles__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Roles__c</fullName>
    <label>Mapped Roles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>