unpackaged/main/default/objects/Goal__c/fields/Meeting_Hours__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Hours__c</fullName>
    <label>Meeting Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>