unpackaged/main/default/objects/Goal__c/fields/Month_Index_All_Roles__c.field-meta.xml
<CustomField>
    <fullName>Month_Index_All_Roles__c</fullName>
    <label>Month Index (All Roles)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>