unpackaged/main/default/objects/Goal__c/fields/Month_Index_Current_Role__c.field-meta.xml
<CustomField>
    <fullName>Month_Index_Current_Role__c</fullName>
    <label>Month Index (Current Role)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>