unpackaged/main/default/objects/Goal__c/fields/Net_Expansion_Goal__c.field-meta.xml
<CustomField>
    <fullName>Net_Expansion_Goal__c</fullName>
    <label>Net Expansion (Goal)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>