unpackaged/main/default/objects/Goal__c/fields/New_Ann_Rev_Actual_Exp_Non_Ren_QTD__c.field-meta.xml
<CustomField>
    <fullName>New_Ann_Rev_Actual_Exp_Non_Ren_QTD__c</fullName>
    <label>New Ann Rev Actual (Exp: Non Ren) (QTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>