unpackaged/main/default/objects/Goal__c/fields/New_Ann_Rev_Actual_Exp_Ren_YTD__c.field-meta.xml
<CustomField>
    <fullName>New_Ann_Rev_Actual_Exp_Ren_YTD__c</fullName>
    <label>New Ann Rev Actual (Exp: Ren) (YTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>